--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "zcash-bitcore-lib": "git+https://github.com/bitmex/zcash-bitcore-lib.git"
     },
     "scripts": {
-		"install": "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/zcash-bitcore-lib/",
+		"install": "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/node_modules/zcash-bitcore-lib/",
          "start": "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/node ./index.js"
     }
 }
