--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
         "url": "https://github.com/GRinvest/EquihashVanityGenerator.git"
     },
     "dependencies": {
-        "node_modules/zcash-bitcore-lib": "git+https://github.com/bitmex/zcash-bitcore-lib.git"
+		"os": "*"
+		"cluster": "*"
+        "zcash-bitcore-lib": "git+https://github.com/GRinvest/zcash-bitcore-lib.git"
     },
     "scripts": {
-		"install": "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/node_modules/zcash-bitcore-lib/",
          "start": "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/node ./index.js"
     }
 }
